--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "themes/piko"]
 	path = themes/piko
-	url = https://github.com/heksagonnet/piko
+	url = git@github.com:MordiJC/hugo-piko-theme.git
+	branch = post-meta-fix
